--- a/index.html
+++ b/index.html
@@ -4,8 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Döküman</title>
+    <link href="./style/index.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+<img src="https://workintech.com.tr/assets/logo-light-c0bded94.svg"/>
+
+<nav>
+
+        <a href="#" class="active">Ana Sayfa</a>
+        <a href="#">Hakkimizda</a>
+        <a href="#">İletişim</a>
+        <a href="#">Projeler</a>
+
+</nav>
+
+    </header>
+
+<main>
+    <h1>Mete Bayin</h1>
+<a href="#">Projelerim</a>
+
+</main>
+    <section class="project-section">
+<div class="project-card">
+
+    <img src="https://picsum.photos/200" />
+
+    <h2>Project 1</h2>
+</div>
+<div class="project-card">
+
+    <img src="https://picsum.photos/200" />
+
+    <h2>Project 2</h2>
+
+</div>
+<div class="project-card">
+
+    <img src="https://picsum.photos/200" />
+
+    <h2>Project 3</h2>
+
+</div>
+<div class="project-card">
+
+    <img src="https://picsum.photos/200" />
+
+    <h2>Project 4</h2>
+
+</div>
+<div class="project-card">
+
+    <img src="https://picsum.photos/200" />
+
+    <h2>Project 5</h2>
+
+</div>
+<div class="project-card">
+
+    <img src="https://picsum.photos/200" />
+
+    <h2>Project 6</h2>
+
+</div>
+
+    </section>
+
+    <footer>
+        <a href="#">Bana Ulaşin</a>
+    </footer>
 </body>
+
 </html>
